5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1811_2570.log
== SUBMITION (2019-06-13 10:25:03) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("x: ")))
c=sum(x)/size(x)
g=size(x)
d=1
for i in x:
	d=d*abs(i-c)
	v=(d)**(1/(size(x))

print(round(v,3))
-- EXECUTION TIME:
0.738337
-- ERROR:
  File "/home/codebench/codes/1811/2570/main.py", line 11
    print(round(v,3))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:26:38) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("x: ")))
c=sum(x)/size(x)
g=size(x)
d=1
for i in x:
	d=d*abs(i-c)
	v=(d)**(1/(size(x))

print(round(v,3))
-- ERROR:
File "XXXX", line 11
    print(round(v,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:05) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("x: ")))
c=sum(x)/size(x)
g=size(x)
d=1
for i in x:
	d=d*abs(i-c)
	v=(d)**(1/(size(x))
print(round(v,3))
-- ERROR:
File "XXXX", line 10
    print(round(v,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:27:06) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("x: ")))
c=sum(x)/size(x)
g=size(x)
d=1
for i in x:
	d=d*abs(i-c)
	v=(d)**(1/(size(x))
print(round(v,3))
-- EXECUTION TIME:
0.809211
-- ERROR:
  File "/home/codebench/codes/1811/2570/main.py", line 10
    print(round(v,3))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:35) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("x: ")))
c=sum(x)/size(x)
g=size(x)
d=1
for i in x:
	d=d*abs(i-c)
	v=(d)**(1/(size(x))
print(round(v,3))
-- ERROR:
File "XXXX", line 10
    print(round(v,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:28:39) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("x: ")))
m=sum(x)/size(x)
n=size(x)
s=1
for i in x:
	s=s*abs(i-m)
	d=(s)**(1/(size(x))
print(round(d,3))
-- EXECUTION TIME:
0.628908
-- ERROR:
  File "/home/codebench/codes/1811/2570/main.py", line 10
    print(round(d,3))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:28:40) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("x: ")))
m=sum(x)/size(x)
n=size(x)
s=1
for i in x:
	s=s*abs(i-m)
	d=(s)**(1/(size(x))
print(round(d,3))
-- ERROR:
File "XXXX", line 10
    print(round(d,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:29:48) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("x: ")))
m=sum(x)/size(x)
n=size(x)
s=1
for i in x:
	s=s*abs(i-m)
	d=(s)**(1/(size(x))


print(round(d,3))
-- ERROR:
File "XXXX", line 12
    print(round(d,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:30:39) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("x: ")))
m=sum(x)/size(x)
n=size(x)
s=1
for i in x:
	s=s*abs(i-m)
	d=(s)**(1/(size(x))
print(round(d,3))
-- ERROR:
File "XXXX", line 10
    print(round(d,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:30:56) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("x: ")))
m=sum(x)/size(x)
n=size(x)
s=1
for i in x:
	s=s*abs(i-m)
	d=(s)**(1/(size(x))
print(round(d,3)
-- ERROR:
File "XXXX", line 10
    print(round(d,3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:30:57) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("x: ")))
m=sum(x)/size(x)
n=size(x)
s=1
for i in x:
	s=s*abs(i-m)
	d=(s)**(1/(size(x))
print(round(d,3)
-- EXECUTION TIME:
0.559574
-- ERROR:
  File "/home/codebench/codes/1811/2570/main.py", line 10
    print(round(d,3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:31:09) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("x: ")))
m=sum(x)/size(x)
n=size(x)
s=1
for i in x:
	s=s*abs(i-m)
	d=(s)**(1/(size(x))
print((round(d,3)))
-- ERROR:
File "XXXX", line 10
    print((round(d,3)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:31:46) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("x: ")))
m=sum(x)/size(x)
n=size(x)
s=1
for i in x:
	s=s*abs(i-m)
	d=(s)**(1/(size(x))
print(round(d,3))
-- ERROR:
File "XXXX", line 10
    print(round(d,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:31:46) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("x: ")))
m=sum(x)/size(x)
n=size(x)
s=1
for i in x:
	s=s*abs(i-m)
	d=(s)**(1/(size(x))
print(round(d,3))
-- ERROR:
File "XXXX", line 10
    print(round(d,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:32:50) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("x: ")))
m=sum(x)/size(x)
n=size(x)
s=1
for i in x:
	s=s*abs(i-m)
	d=(s)**(1/(size(x))
print(round(d,3))
-- ERROR:
File "XXXX", line 10
    print(round(d,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:32:53) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("x: ")))
m=sum(x)/size(x)
n=size(x)
s=1
for i in x:
	s=s*abs(i-m)
	d=(s)**(1/(size(x))
print(round(d,3))
-- ERROR:
File "XXXX", line 10
    print(round(d,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:33:17) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("x: ")))
m=sum(x)/size(x)
s=1
for i in x:
	s=s*abs(i-m)
	d=(s)**(1/(size(x))
print(round(d,3))
-- EXECUTION TIME:
0.674756
-- ERROR:
  File "/home/codebench/codes/1811/2570/main.py", line 9
    print(round(d,3))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:33:19) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("x: ")))
m=sum(x)/size(x)
s=1
for i in x:
	s=s*abs(i-m)
	d=(s)**(1/(size(x))
print(round(d,3))
-- ERROR:
File "XXXX", line 9
    print(round(d,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:11:27) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("digite o vetor: ")))
m=sum(x)/size(x)
n=size(x)
s=1
for i in x:
	s=s*abs(i-m)
	d=(s)**(1/size(x))
print(round(d,3))
-- EXECUTION TIME:
1.24821
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
